[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-mngr"
version = "0.1.2"
description = "A beautiful terminal SSH connection manager — like mRemoteNG for your terminal"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ssh", "terminal", "tui", "connection-manager", "devops", "sysadmin"]
authors = [
    { name = "Haim Cohen" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/sk3pp3r/ssh-mngr"
Repository = "https://github.com/sk3pp3r/ssh-mngr"
Issues = "https://github.com/sk3pp3r/ssh-mngr/issues"

[project.scripts]
ssh-mngr = "ssh_mngr.app:main"
ssm = "ssh_mngr.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_mngr"]
